# mx-dns-sc

./: .gitignore  Cargo.toml  README.md  build-wasm.sh  clean-wasm.sh  compile-wasm.sh  wat-build.sh
.github/workflows/: actions.yml  release.yml
base-usernames/: Cargo.toml
base-usernames/meta/: Cargo.toml
base-usernames/meta/src/: main.rs
base-usernames/src/: lib.rs  username_status.rs
base-usernames/wasm/: Cargo.toml
base-usernames/wasm/src/: lib.rs
c-version/: c-version.c  c-version.export
c-version/elrond/: context.h  util.h
c-version/multiversx/: context.h
c-version/output/: c-version.wasm
common/: Cargo.toml
common/src/: lib.rs  name_cache.rs  name_hash.rs  name_split.rs  user_builtin.rs
debug/: Cargo.toml
debug/src/: main.rs  name_test.rs
deployer/: Cargo.toml
deployer/src/: lib.rs
dns/: Cargo.toml  README.md  multicontract.toml  multiversx.json
dns-extra/: Cargo.toml
dns-extra/src/: lib.rs  name_util.rs  storage.rs
dns/abi/: Cargo.toml
dns/abi/src/: main.rs
dns/debug/: Cargo.toml
dns/debug/src/: main.rs  name_test.rs
dns/fuzz/: Cargo.toml
dns/fuzz/fuzz_targets/: fuzz_value_state.rs
dns/mandos/: 01_dns_init.steps.json  02_dns_init_check.steps.json  03_register_name_ok.steps.json  04_register_name_again.steps.json  05_claim.steps.json  06_register_other_name_same_shard.steps.json  07_bogus_name.steps.json  main.scen.json  migrate.scen.json  resolve-elrond.scen.json
dns/meta/: Cargo.toml
dns/meta/src/: main.rs
dns/output/: dns.abi.json  dns.hex  dns.wasm  elrond-wasm-sc-dns.abi.json  elrond-wasm-sc-dns.imports.json  elrond-wasm-sc-dns.wasm  elrond-wasm-sc-dns.wat  multiversx-sc-sc-dns.abi.json
dns/scenarios/: 03_register_name_ok.steps.json  04_register_name_again.steps.json  05_claim.steps.json  resolve-elrond.scen.json
dns/src/: lib.rs  name_util.rs  name_validation.rs  storage.rs  user_builtin.rs  value_state.rs
dns/test/: claim.steps.json  register_name_again.steps.json  register_name_ok.steps.json
dns/tests/: mandos_go_tests.rs  mandos_rs_tests.rs  mandos_test.rs  name_validation_test.rs  prepare_name_for_hash_test.rs  scenario_go_tests.rs  scenario_rs_tests.rs
dns/wasm/: Cargo.toml
dns/wasm/src/: lib.rs
domain-auction/: Cargo.toml
domain-auction/meta/: Cargo.toml
domain-auction/meta/src/: main.rs
domain-auction/src/: domain_nft_attributes.rs  domain_status.rs  lib.rs
domain-auction/wasm/: Cargo.toml
domain-auction/wasm/src/: lib.rs
domain-manager-x/: Cargo.toml
domain-manager-x/meta/: Cargo.toml
domain-manager-x/meta/src/: main.rs
domain-manager-x/src/: lib.rs
domain-manager-x/wasm/: Cargo.toml
domain-manager-x/wasm/src/: lib.rs
src/: lib.rs  name_util.rs
tools/name-miner/: Cargo.toml
tools/name-miner/src/: main.rs
user-mock/: Cargo.toml
user-mock/output/: user-mock.hex  user-mock.wasm  user_mock.wasm
user-mock/src/: lib.rs
user-mock/wasm/: Cargo.toml
user-mock/wasm/src/: lib.rs
