[package]
name = "base-usernames"
version = "0.0.0"
authors = [ "Claudiu-Marcel Bruda <claudiu.bruda@multiversx.com>", "MultiversX <contact@multiversx.com>" ]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "0.39.4"

[dependencies.common]
path = "../common"

[dependencies.multiversx-sc-modules]
version = "0.39.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.39.4"
