[package]
name = "dns-extra"
version = "0.0.1"
authors = ["andrei-marinica <andrei.marinica@elrond.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "dns-extra"
path = "src/lib.rs"


[dependencies]
elrond-wasm = "0.3.2"
elrond-wasm-node = "0.3.2"
elrond-wasm-derive = "0.3.2"

# elrond-wasm = { path = "../../elrond-wasm-rs/elrond-wasm" }
# elrond-wasm-node = { path = "../../elrond-wasm-rs/elrond-wasm-node" }
# elrond-wasm-derive = { path = "../../elrond-wasm-rs/elrond-wasm-derive" }
