[package]
name = "elrond-wasm-sc-dns"
version = "1.1.0"
edition = "2018"

authors = ["Andrei Marinica <andrei.marinica@elrond.com>", "Elrond Network <contact@elrond.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/ElrondNetwork/sc-dns-rs"
homepage = "https://elrond.com/"
documentation = "https://docs.elrond.com/"
description = "Elrond Domain Name Service smart contract"
keywords = ["elrond", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies", "development-tools"]

[dependencies.elrond-wasm-modules]
version = "0.31.1"

[dependencies.elrond-wasm]
version = "0.31.1"

[dev-dependencies.elrond-wasm-debug]
version = "0.31.1"
