[package]
name = "multiversx-sc-sc-dns"
version = "1.1.0"
edition = "2021"
authors = ["Andrei Marinica <andrei.marinica@elrond.com>", "Elrond Network <contact@elrond.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/ElrondNetwork/sc-dns-rs"
homepage = "https://elrond.com/"
documentation = "https://docs.elrond.com/"
description = "Elrond Domain Name Service smart contract"
keywords = ["elrond", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies", "development-tools"]
[dependencies.multiversx-sc-modules]
version = "0.39.5"

[dependencies.multiversx-sc]
version = "0.39.5"
[dev-dependencies.multiversx-sc-scenario]
version = "0.39.5"
