[package]
name = "dns"
version = "1.1.0"
edition = "2021"
authors = ["Andrei Marinica <andrei.marinica@multiversx.com>", "MultiversX <contact@multiversx.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/multiversx/mx-dns-sc"
homepage = "https://multiversx.com/"
documentation = "https://docs.multiversx.com/"
description = "MultiversX Domain Name Service smart contract"
keywords = ["multiversx", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies", "development-tools"]

[dependencies.multiversx-sc-modules]
version = "0.39.5"

[dependencies.multiversx-sc]
version = "0.39.5"

[dependencies.common]
path = "../common"

[dev-dependencies.multiversx-sc-scenario]
version = "0.39.5"
