[package]
name = "user-mock"
version = "0.3.0"
authors = ["andrei-marinica <andrei.marinica@elrond.com>"]
edition = "2018"

[features]
wasm-output-mode = [
    "elrond-wasm-node",
]

default = []

[dependencies]
elrond-wasm = "0.9.6"
elrond-wasm-derive = "0.9.6"
elrond-wasm-node = { version = "0.9.6", optional = true }

[dev-dependencies]
elrond-wasm-debug = "0.9.6"