[package]
name = "dns-debug"
version = "0.2.0"
authors = ["andrei-marinica <andrei_m_marinica@yahoo.com>"]
edition = "2018"

[dependencies]
# elrond-wasm = "0.3.2"
# elrond-wasm-debug = "0.3.2"

elrond-wasm = { path = "../../../elrond-wasm-rs/elrond-wasm" }
elrond-wasm-debug = { path = "../../../elrond-wasm-rs/elrond-wasm-debug" }

dns = { path = ".." }
