[package]
name = "dns-wasm"
version = "0.0.0"
authors = ["andrei-marinica <andrei_m_marinica@yahoo.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]
[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
[dependencies.dns]
path = ".."

[dependencies.multiversx-sc-wasm-adapter]
version = "0.39.5"

[workspace]
members = ["."]
