[package]
name = "domain-manager-x-meta"
version = "0.0.0"
edition = "2018"
publish = false
authors = [ "Claudiu-Marcel Bruda <claudiu.bruda@multiversx.com>", "MultiversX <contact@multiversx.com>" ]

[dev-dependencies]

[dependencies.domain-manager-x]
path = ".."

[dependencies.multiversx-sc-meta]
version = "0.39.4"
