[package]
name = "domain-manager-x-wasm"
version = "0.0.0"
authors = [ "Claudiu-Marcel Bruda <claudiu.bruda@multiversx.com>", "MultiversX <contact@multiversx.com>" ]
edition = "2018"
publish = false

[lib]
crate-type = [ "cdylib",]

[workspace]
members = [ ".",]

[dev-dependencies]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.domain-manager-x]
path = ".."

[dependencies.multiversx-sc-wasm-adapter]
version = "0.39.4"
