[package]
name = "user-mock-wasm"
version = "0.2.0"
authors = ["andrei-marinica <andrei_m_marinica@yahoo.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies]
user-mock = { path = "..", features=["wasm-output-mode"], default-features = false }
elrond-wasm-output = { version="0.7.1", features=["wasm-output-mode"] }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]
